[gd_scene load_steps=3 format=3 uid="uid://byuuv6yjd5jus"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_rbh2c"]
[ext_resource type="Theme" uid="uid://bfwu6vgvh08wt" path="res://gui_theme.tres" id="2_xnwjd"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rbh2c")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_xnwjd")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2

[node name="FpsLabel" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MagLabel" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mag: ? / ? "

[node name="AmmoLabel" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ammo: ? / ?"
